--- a/src/components/InputHabit.css
+++ b/src/components/InputHabit.css
@@ -1,8 +1,8 @@
 .input-habit-form {
     width: 400px;
     display: flex;
-    flex-wrap: wrap;
-    /* flex-direction: column; */
+    /* flex-wrap: wrap; */
+    flex-direction: column;
     /* justify-content: center; */
     padding: 1rem;
     gap: 10px;
@@ -20,7 +20,7 @@
 }
 
 select {
-    width: 160px;
+    width: 340px;
     padding: 0.5rem 1rem;
 }
 
@@ -32,4 +32,8 @@ select {
     gap: 10px;
 }
 
+label {
+    display: flex;
+    flex-direction: column
+}
 
