--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,9 +1,12 @@
 nav {
     background-color: rgba(38,38,38,1);
-    /* position: fixed;
-    top: 0; */
+    position: sticky;
+    top: 0;
     color: white;
     padding: 0 1rem;
+}
+nav h1{
+    margin-top: 0;
 }
 
 .pages-nav {
